feat: refactor mappers and update OpenAPI definitions for user and address requests
