# src/main/java/com/fiap/foodfiapp/infrastructure/rest/controller/UserController.java
@@ -1,12 +1,14 @@
 package com.fiap.foodfiapp.infrastructure.rest.controller;
 
+import com.fiap.foodfiapp.api.UsersApi;
 import com.fiap.foodfiapp.core.application.usecases.user.CreateUserUseCase;
 import com.fiap.foodfiapp.core.domain.exception.BusinessException;
-import com.fiap.foodfiapp.infrastructure.rest.dto.UserRequestDTO;
-import com.fiap.foodfiapp.infrastructure.rest.dto.UserResponseDTO;
 import com.fiap.foodfiapp.core.application.gateways.UserRepositoryGateway;
+import com.fiap.foodfiapp.infrastructure.rest.mapper.CreateUserRequestMapper;
+import com.fiap.foodfiapp.infrastructure.rest.mapper.UpdateUserRequestMapper;
 import com.fiap.foodfiapp.infrastructure.rest.mapper.UserRequestMapper;
 import com.fiap.foodfiapp.infrastructure.rest.mapper.UserResponseMapper;
+import com.fiap.foodfiapp.model.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -17,7 +19,7 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users")
-public class UserController {
+public class UserController implements UsersApi {
     private final CreateUserUseCase createUserUseCase;
     private final UserRepositoryGateway userRepositoryGateway;
 
@@ -26,47 +28,13 @@ public class UserController {
         this.userRepositoryGateway = userRepositoryGateway;
     }
 
-    @PostMapping
-    public ResponseEntity<UserResponseDTO> createUser(@RequestBody UserRequestDTO userRequestDTO) {
+    @Override
+    public ResponseEntity<UserResponse> createUser(CreateUserRequest createUserRequest) {
         try {
-            var user = UserRequestMapper.toEntity(userRequestDTO);
+            var user = CreateUserRequestMapper.toEntity(createUserRequest);
             var createdUser = createUserUseCase.execute(user);
             var responseDTO = UserResponseMapper.toDTO(createdUser);
             return ResponseEntity.status(HttpStatus.CREATED).body(responseDTO);
-        } catch (BusinessException ex) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).build();
-        }
-    }
-
-    @GetMapping
-    public ResponseEntity<List<UserResponseDTO>> findAll() {
-        var users = userRepositoryGateway.findAll();
-        var response = users.stream()
-                .map(UserResponseMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(response);
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<UserResponseDTO> findById(@PathVariable UUID id) {
-        return userRepositoryGateway.findById(id)
-                .map(UserResponseMapper::toDTO)
-                .map(ResponseEntity::ok)
-                .orElse(ResponseEntity.notFound().build());
-    }
-
-    @PutMapping("/{id}")
-    public ResponseEntity<UserResponseDTO> updateUser(@PathVariable UUID id, @RequestBody UserRequestDTO userRequestDTO) {
-        try {
-            var existingUser = userRepositoryGateway.findById(id).orElse(null);
-            if (existingUser == null) {
-                return ResponseEntity.notFound().build();
-            }
-            var updatedUser = UserRequestMapper.toEntity(userRequestDTO);
-            updatedUser.setId(id);
-            var savedUser = userRepositoryGateway.save(updatedUser);
-            var responseDTO = UserResponseMapper.toDTO(savedUser);
-            return ResponseEntity.ok(responseDTO);
         } catch (BusinessException ex) {
             return ResponseEntity.status(HttpStatus.CONFLICT).build();
         }
@@ -76,5 +44,44 @@ public class UserController {
     public ResponseEntity<Void> deleteUser(@PathVariable UUID id) {
         userRepositoryGateway.deleteById(id);
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<UserResponse> getUser(UUID id) {
+        return userRepositoryGateway.findById(id)
+                .map(UserResponseMapper::toDTO)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<List<UserResponse>> getUsers() {
+        var users = userRepositoryGateway.findAll();
+        var response = users.stream()
+                .map(UserResponseMapper::toDTO)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(response);
+    }
+
+    @Override
+    public ResponseEntity<UserResponse> updateUser(UUID id, UpdateUserRequest updateUserRequest) {
+        try {
+            var existingUser = userRepositoryGateway.findById(id).orElse(null);
+            if (existingUser == null) {
+                return ResponseEntity.notFound().build();
+            }
+            var updatedUser = UpdateUserRequestMapper.toEntity(updateUserRequest);
+            updatedUser.setId(id);
+            var savedUser = userRepositoryGateway.save(updatedUser);
+            var responseDTO = UserResponseMapper.toDTO(savedUser);
+            return ResponseEntity.ok(responseDTO);
+        } catch (BusinessException ex) {
+            return ResponseEntity.status(HttpStatus.CONFLICT).build();
+        }
+    }
+
+    @Override
+    public ResponseEntity<Void> changePassword(ChangePasswordRequest changePasswordRequest) {
+        return null;
     }
 }
