# src/main/java/com/fiap/foodfiapp/infrastructure/rest/dto/AddressRequestDTO.java
@@ -1,22 +1,0 @@
-package com.fiap.foodfiapp.infrastructure.rest.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-import java.util.UUID;
-
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-public class AddressRequestDTO {
-    private UUID id;
-    private String publicPlace;
-    private String number;
-    private String complement;
-    private String neighborhood;
-    private String city;
-    private String state;
-    private String postalCode;
-
-}
