# src/main/java/com/fiap/foodfiapp/infrastructure/rest/mapper/AdressRequestMapper.java
@@ -1,14 +1,14 @@
 package com.fiap.foodfiapp.infrastructure.rest.mapper;
 
 import com.fiap.foodfiapp.core.domain.entity.Address;
-import com.fiap.foodfiapp.infrastructure.rest.dto.AddressRequestDTO;
+import com.fiap.foodfiapp.model.AddressRequest;
 
 import java.util.List;
 
 public class AdressRequestMapper {
     private AdressRequestMapper(){}
 
-    public static Address toEntity(AddressRequestDTO dto) {
+    public static Address toEntity(AddressRequest dto) {
         return new Address(
                 dto.getId(),
                 dto.getPublicPlace(),
@@ -21,7 +21,7 @@ public class AdressRequestMapper {
         );
     }
 
-    public static List<Address> toEntity(List<AddressRequestDTO> dto) {
+    public static List<Address> toEntity(List<AddressRequest> dto) {
         return dto.stream().map(AdressRequestMapper::toEntity).toList();
     }
 }
