# src/main/java/com/fiap/foodfiapp/infrastructure/rest/mapper/CreateUserRequestMapper.java
@@ -1,17 +1,16 @@
 package com.fiap.foodfiapp.infrastructure.rest.mapper;
 
-import com.fiap.foodfiapp.core.domain.entity.UserType;
 import com.fiap.foodfiapp.core.domain.entity.User;
-import com.fiap.foodfiapp.model.UserRequest;
+import com.fiap.foodfiapp.core.domain.entity.UserType;
+import com.fiap.foodfiapp.model.CreateUserRequest;
 
 import java.time.OffsetDateTime;
-import java.util.UUID;
 
-public class UserRequestMapper {
-    private UserRequestMapper() {
+public class CreateUserRequestMapper {
+    private CreateUserRequestMapper() {
     }
 
-    public static User toEntity(UserRequest dto) {
+    public static User toEntity(CreateUserRequest dto) {
         UserType userType = new UserType();
         userType.setUuid(dto.getUserTypeUuid());
         return new User(
