# src/main/java/com/fiap/foodfiapp/infrastructure/rest/mapper/UserResponseMapper.java
@@ -2,8 +2,8 @@ package com.fiap.foodfiapp.infrastructure.rest.mapper;
 
 import com.fiap.foodfiapp.core.domain.entity.Address;
 import com.fiap.foodfiapp.core.domain.entity.User;
-import com.fiap.foodfiapp.infrastructure.rest.dto.AddressResponseDTO;
-import com.fiap.foodfiapp.infrastructure.rest.dto.UserResponseDTO;
+import com.fiap.foodfiapp.model.AddressResponse;
+import com.fiap.foodfiapp.model.UserResponse;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -12,37 +12,41 @@ public class UserResponseMapper {
     private UserResponseMapper() {
     }
 
-    public static UserResponseDTO toDTO(User user) {
-        List<AddressResponseDTO> addresses = null;
+    public static UserResponse toDTO(User user) {
+        List<AddressResponse> addresses = null;
         if (user.getAddresses() != null) {
             addresses = user.getAddresses().stream()
                     .map(UserResponseMapper::toAddressDTO)
                     .collect(Collectors.toList());
         }
 
-        return new UserResponseDTO(
-                user.getId(),
-                user.getName(),
-                user.getEmail(),
-                user.getCpf(),
-                user.getLogin(),
-                addresses,
-                user.getUserType().getName(),
-                user.isActive()
-        );
+        UserResponse userResponse = new UserResponse();
+        userResponse.setId(user.getId());
+        userResponse.setName(user.getName());
+        userResponse.setEmail(user.getEmail());
+        userResponse.setCpf(user.getCpf());
+        userResponse.setLogin(user.getLogin());
+        userResponse.setAddresses(addresses);
+        userResponse.setUserType(user.getUserType().getName());
+        userResponse.setActive(user.isActive());
+
+        return userResponse;
     }
 
-    private static AddressResponseDTO toAddressDTO(Address address) {
-        return new AddressResponseDTO(
-                address.getId(),
-                address.getPublicPlace(),
-                address.getNumber(),
-                address.getComplement(),
-                address.getNeighborhood(),
-                address.getCity(),
-                address.getState(),
-                address.getPostalCode()
-        );
+    private static AddressResponse toAddressDTO(Address address) {
+
+        AddressResponse addressResponse = new AddressResponse();
+        addressResponse.setId(address.getId());
+        addressResponse.setPublicPlace(address.getPublicPlace());
+        addressResponse.setNumber(address.getNumber());
+        addressResponse.setComplement(address.getComplement());
+        addressResponse.setNeighborhood(address.getNeighborhood());
+        addressResponse.setCity(address.getCity());
+        addressResponse.setState(address.getState());
+        addressResponse.setPostalCode(address.getPostalCode());
+
+
+        return addressResponse;
     }
 }
 
